Check for existing borrower before adding a new one

KABC::Addressee uids are not constant, so be sure to use existing
borrower uid if already present in collection. And in the collection
itself, check against existing borrower uid when adding a new one to
prevent duplication. Finally, prevent having empty uids altogether.

BUG: 307958
FIXED-IN: 2.3.7